Corrected bug where the wrong order finite differencing is used.

--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
@@ -389,6 +389,9 @@
     "            BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
     "\n",
     "# We'll lower the FD order at each stage and write to a new file.\n",
+    "# But first, we need to save the original order\n",
+    "original_order = par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\")\n",
+    "\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 10)\n",
     "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_10.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
     "\n",
@@ -470,7 +473,10 @@
     "            else:\n",
     "                BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
     "\n",
-    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_2x2U.h\",set_BU_to_print(),params=\"outCverbose=False\")\n"
+    "fin.FD_outputC(\"GiRaFFE_standalone/B_from_A_2x2U.h\",set_BU_to_print(),params=\"outCverbose=False\")\n",
+    "\n",
+    "# And now, we set the FD order back to what it was.\n",
+    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", original_order)"
    ]
   },
   {
@@ -518,13 +524,13 @@
     "# Part P0: Set the number of ghost cells, from NRPy+'s FD_CENTDERIVS_ORDER\n",
     "with open(\"GiRaFFE_standalone/NGHOSTS.h\", \"w\") as file:\n",
     "    file.write(\"// Part P0: Set the number of ghost zones, from NRPy+'s FD_CENTDERIVS_ORDER\\n\")\n",
-    "    # Upwinding in BSSN requires that NGHOSTS = FD_CENTDERIVS_ORDER/2 + 1 <- Notice the +1.\n",
-    "    file.write(\"#define NGHOSTS \"+str(int(par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\")/2)+1)+\"\\n\")"
+    "    # We do not need upwinding in GiRaFFE\n",
+    "    file.write(\"#define NGHOSTS \"+str(int(par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\")/2))+\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -551,12 +557,12 @@
     "// Step P3: Set free parameters\n",
     "// Step P3a: Free parameters for the numerical grid\n",
     "// Cartesian coordinates parameters\n",
-    "const REAL xmin = -10.,xmax=10.;\n",
-    "const REAL ymin = -10.,ymax=10.;\n",
-    "const REAL zmin = -10.,zmax=10.;\n",
+    "const REAL xmin = -20.301871875,xmax=20.301871875;\n",
+    "const REAL ymin = -20.301871875,ymax=20.301871875;\n",
+    "const REAL zmin = -20.301871875,zmax=20.301871875;\n",
     "\n",
     "// Time coordinate parameters\n",
-    "const REAL t_final =  1.0; /* Final time is set so that at t=t_final, \n",
+    "const REAL t_final =  0.14; /* Final time is set so that at t=t_final, \n",
     "                            * data at the origin have not been corrupted \n",
     "                            * by the approximate outer boundary condition */\n",
     "REAL CFL_FACTOR = 0.5; // Set the CFL Factor\n",
@@ -863,7 +869,8 @@
     "        char filename[100];\n",
     "        sprintf(filename,\"out%d-%08d.txt\",Nxx[0],n);\n",
     "        FILE *out2D = fopen(filename, \"w\");\n",
-    "        LOOP_REGION(NGHOSTS,Nxx_plus_2NGHOSTS[0]-NGHOSTS, NGHOSTS,Nxx_plus_2NGHOSTS[1]-NGHOSTS, NGHOSTS,Nxx_plus_2NGHOSTS[2]-NGHOSTS) {\n",
+    "        //LOOP_REGION(NGHOSTS,Nxx_plus_2NGHOSTS[0]-NGHOSTS, NGHOSTS,Nxx_plus_2NGHOSTS[1]-NGHOSTS, NGHOSTS,Nxx_plus_2NGHOSTS[2]-NGHOSTS) {\n",
+    "        LOOP_REGION(NGHOSTS,Nxx_plus_2NGHOSTS[0]-NGHOSTS, 78,79,78,79) {\n",
     "            const int idx = IDX3(i0,i1,i2);\n",
     "            REAL xx0 = xx[0][i0];\n",
     "            REAL xx1 = xx[1][i1];\n",
@@ -871,12 +878,12 @@
     "            REAL xCart[3];\n",
     "#include \"xxCart.h\"\n",
     "            fprintf(out2D,\"%e %e %e %e\\n\",\n",
-    "                    xCart[1],xCart[2],\n",
-    "                    evol_gfs[IDX4pt(AD0GF,idx)],aux_gfs[IDX4pt(VALENCIAVU0GF,idx)]);\n",
+    "                    xCart[0],xCart[2],\n",
+    "                    evol_gfs[IDX4pt(STILDED0GF,idx)],aux_gfs[IDX4pt(BU0GF,idx)]);\n",
     "        }\n",
     "        fclose(out2D);\n",
     "    }\n",
-    "\n",
+    "    \n",
     "    // Progress indicator printing to stdout\n",
     "    // Measure average time per iteration\n",
     "    clock_gettime(CLOCK_REALTIME, &end);\n",
@@ -1075,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -1565,17 +1572,11 @@
      "text": [
       "Now compiling, should take ~10 seconds...\n",
       "\n",
-      "Finished in 1.63536000252 seconds.\n",
+      "Finished in 1.5115749836 seconds.\n",
       "\n",
       "Now running at low-resolution. Should take ~25 seconds...\n",
       "\n",
-      "Starting A to B driver with Order = 4...\n",
-      "Computing A to B with Order = 4...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
+      "Starting A to B driver with Order = 2...\n",
       "Computing A to B with Order = 2...\n",
       "Computing A to B at x = min...\n",
       "Computing A to B at x = max...\n",
@@ -1583,13 +1584,7 @@
       "Computing A to B at y = max...\n",
       "Computing A to B at z = min...\n",
       "Computing A to B at z = max...\n",
-      "Starting A to B driver with Order = 4...\n",
-      "Computing A to B with Order = 4...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
+      "Starting A to B driver with Order = 2...\n",
       "Computing A to B with Order = 2...\n",
       "Computing A to B at x = min...\n",
       "Computing A to B at x = max...\n",
@@ -1599,27 +1594,7 @@
       "Computing A to B at z = max...\n",
       "Starting conservative-to-primitive solver...\n",
       "Starting time step 0...\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 1.000000\n",
-      "u4upperZero = 1.000000\n",
-      "u4upperZero = 1.000000\n",
-      "u4upperZero = 1.000000\n",
-      "u4upperZero = 1.000000\n",
-      "u4upperZero = 1.000000\n",
-      "u4upperZero = 1.000000\n",
-      "u4upperZero = 1.000000\n",
-      "u4upperZero = 1.000000\n",
-      "u4upperZero = 1.000000\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "Starting A to B driver with Order = 4...\n",
-      "Computing A to B with Order = 4...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
+      "Starting A to B driver with Order = 2...\n",
       "Computing A to B with Order = 2...\n",
       "Computing A to B at x = min...\n",
       "Computing A to B at x = max...\n",
@@ -1630,27 +1605,7 @@
       "Starting conservative-to-primitive solver...\n",
       "Writing output...\n",
       "Starting time step 1...; ETA inf s | t/h 0.00 | gp/s 0.00e+00\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "u4upperZero = 44.721360\n",
-      "Starting A to B driver with Order = 4...\n",
-      "Computing A to B with Order = 4...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
-      "Computing A to B with Order = 2...\n",
+      "Starting A to B driver with Order = 2...\n",
       "Computing A to B with Order = 2...\n",
       "Computing A to B at x = min...\n",
       "Computing A to B at x = max...\n",
@@ -1660,8 +1615,8 @@
       "Computing A to B at z = max...\n",
       "Starting conservative-to-primitive solver...\n",
       "Writing output...\n",
-      "\u001b[2KIt: 1 t=1.00 | 100.0%; ETA 0 s | t/h 1516254.88 | gp/s 1.68e+06\n",
-      "Finished in 0.0142879486084 seconds.\n",
+      "\u001b[2KIt: 1 t=0.13 | 100.0%; ETA 0 s | t/h 502.93 | gp/s 1.55e+07\n",
+      "Finished in 1.28505301476 seconds.\n",
       "\n",
       "Now running at higher-resolution. Should take ~75 seconds...\n",
       "\n"
@@ -1678,7 +1633,7 @@
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\nNow running at low-resolution. Should take ~25 seconds...\\n\")\n",
     "\n",
     "start = time.time()\n",
-    "!taskset -c 0,1 ./GiRaFFE_standalone_AR 10 10 10 0.5\n",
+    "!taskset -c 0,1 ./GiRaFFE_standalone_AR 154 154 154 0.5\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\nNow running at higher-resolution. Should take ~75 seconds...\\n\")\n",
     "\n"
