Tutorial-SpinWeighted_Spherical_Harmonics: Fix bug in handwritten C code

--- a/Tutorial-SpinWeighted_Spherical_Harmonics.ipynb
+++ b/Tutorial-SpinWeighted_Spherical_Harmonics.ipynb
@@ -168,7 +168,7 @@
     "        for m in range(-l,l+1):\n",
     "            file.write(\"            case \"+str(m)+\":\\n\")\n",
     "            Y_m2_lm = Y(-2, l, m, th, ph)\n",
-    "            Cstring = outputC([sp.re(Y_m2_lm),sp.im(Y_m2_lm)],[\"*reYlmswm2_l_m\",\"*reYlmswm2_l_m\"],\n",
+    "            Cstring = outputC([sp.re(Y_m2_lm),sp.im(Y_m2_lm)],[\"*reYlmswm2_l_m\",\"*imYlmswm2_l_m\"],\n",
     "                              \"returnstring\",outCparams)\n",
     "            file.write(Cstring)\n",
     "            file.write(\"                  return;\\n\")\n",
@@ -243,7 +243,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-SpinWeighted_Spherical_Harmonics.ipynb to latex\n",
-      "[NbConvertApp] Writing 35839 bytes to Tutorial-SpinWeighted_Spherical_Harmonics.tex\n",
+      "[NbConvertApp] Writing 35846 bytes to Tutorial-SpinWeighted_Spherical_Harmonics.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
