NRPyPlus_Tutorial main page: Remove duplicate Psi4 entries and add ADM in terms of BSSN tutorial module

--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -39,10 +39,7 @@
     "    + [<font color='green'>**IDMaxwellNRPy**</font>: An <font color='green'>**Einstein Toolkit**</font> initial data thorn for Maxwell's equations](Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb)\n",
     "    + [<font color='green'>**MaxwellEvol**</font>: Solving Maxwell's equations in the <font color='green'>**Einstein Toolkit**</font> using the method of lines](Tutorial-ETK_thorn-MaxwellEvol.ipynb)\n",
     "\n",
-    "##### Diagnostic Modules: Gravitational Wave Extraction\n",
-    "+ Application: [Spin-weighted spherical harmonics](Tutorial-SpinWeighted_Spherical_Harmonics.ipynb) (*Courtesy Brandon Clark*)\n",
-    "+ Application: [Computing the $\\psi_4$ Weyl scalar in curvilinear coordinates](Tutorial-Psi4.ipynb)\n",
-    "    + [$\\psi_4$ tetrads in curvilinear coordinates](Tutorial-Psi4_tetrads.ipynb)\n",
+    "##### Diagnostic Modules: Gravitational Wave Extraction in Cartesian coordinates\n",
     "+ Application: [All Weyl scalars and invariants in Cartesian Coordinates](Tutorial-WeylScalarsInvariants-Cartesian.ipynb) (*Courtesy Patrick Nelson*)\n",
     "    + [<font color='green'>**WeylScal4NRPy**</font>: An <font color='green'>**Einstein Toolkit**</font> Diagnostic Thorn](Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb) (*Courtesy Patrick Nelson*)\n",
     "\n",
@@ -65,6 +62,7 @@
     "    + [Time-evolution equations for BSSN gauge quantities $\\alpha$ and $\\beta^i$](Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.ipynb)\n",
     "    + [Hamiltonian and momentum constraint equations](Tutorial-BSSN_constraints.ipynb)\n",
     "    + [Enforcing the conformal 3-metric $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint](Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.ipynb)\n",
+    "    + [Writing quantities of ADM formalism in terms of BSSN quantities](Tutorial-ADM_in_terms_of_BSSN.ipynb)\n",
     "+ **Initial data modules**. Initial data are set in terms of standard [ADM formalism](https://en.wikipedia.org/wiki/ADM_formalism) spacetime quantities.\n",
     "    + [Non-Spinning (\"static trumpet\") black hole initial data](Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb) (*Courtesy Terrence Pierre Jacques & Ian Ruchlin*)\n",
     "    + [Spinning UIUC black bole initial data](Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb) (*Courtesy Terrence Pierre Jacques & Ian Ruchlin*)\n",
@@ -85,6 +83,8 @@
     "    + [The gravitational wave Weyl scalar $\\psi_4$, in arbitrary curvilinear coordinates](Tutorial-Psi4.ipynb)\n",
     "        + [Constructing the quasi-Kinnersley tetrad for $\\psi_4$](Tutorial-Psi4_tetrads.ipynb)\n",
     "            + [Start-to-Finish validation of above expressions in Cartesian coordinates, against Patrick Nelson's Weyl Scalars & Invariants module](BSSN/Psi4Cartesianvalidation/Tutorial-Psi4-Cartesian_validation.ipynb)\n",
+    "        + [Spin-weighted spherical harmonics](Tutorial-SpinWeighted_Spherical_Harmonics.ipynb) (*Courtesy Brandon Clark*)\n",
+    "\n",
     "+ **Start-to-Finish curvilinear BSSN simulation examples**:\n",
     "    + [<font color='purple'>**Colliding black holes!**</font>](Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb)\n",
     "    + [The \"Hydro without Hydro\" test: evolving the spacetime fields of TOV star with $T^{\\mu\\nu}$ assumed static](Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb) ***In progress***"
