--- a/Tutorial-Start_to_Finish-ScalarWave.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave.ipynb
@@ -392,6 +392,7 @@
     }
    ],
    "source": [
+    "# Improved, Windows/Linux-compatible execution script courtesy Brandon Clark\n",
     "import os\n",
     "N_physical_cores = 4\n",
     "!gcc -Ofast -march=native ScalarWave/ScalarWave_Playground.c -o ScalarWave_Playground -lm\n",
