--- a/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "## IDMaxwellNRPy: An Einstein Toolkit Initial Data Thorn for Maxwell's equations\n",
     "\n",
-    "### NRPy+ Source Code for this module: [Maxwell/MaxwellCartesian_ID.py](../edit/Maxwell/MaxwellCartesian_ID.py) , which is fully documented in the [previous NRPy+ tutorial module](Tutorial-MaxwellCartesian.ipynb) on using NRPy+ to construct these Maxwell initial data as SymPy expressions.\n"
+    "### NRPy+ Source Code for this module: [Maxwell/MaxwellCartesian_ID.py](../edit/Maxwell/MaxwellCartesian_ID.py) , which is fully documented in the [previous NRPy+ tutorial module](Tutorial-MaxwellCartesian.ipynb) on using NRPy+ to construct these Maxwell initial data as SymPy expressions.\n",
+    "\n",
+    "<font color='red'>**This module has NOT been validated against a trusted code; do not use it for science.**</font>"
    ]
   },
   {
@@ -329,21 +331,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
