Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis: work on updating/fixing

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
@@ -633,42 +633,42 @@
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Spherical\")\n",
     "rfm.reference_metric()\n",
     "\n",
-    "alpha = alphaCart # The lapse scalar need not\n",
+    "# alpha = alphaCart # The lapse scalar need not\n",
     "\n",
-    "Jac_dUCart_dDrfmUD = ixp.zerorank2()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        Jac_dUCart_dDrfmUD[i][j] = sp.simplify(sp.diff(rfm.xxCart[i],rfm.xx[j]))\n",
+    "# Jac_dUCart_dDrfmUD = ixp.zerorank2()\n",
+    "# for i in range(DIM):\n",
+    "#     for j in range(DIM):\n",
+    "#         Jac_dUCart_dDrfmUD[i][j] = sp.simplify(sp.diff(rfm.xxCart[i],rfm.xx[j]))\n",
     "\n",
-    "Jac_dUrfm_dDCartUD, dummyDET = ixp.generic_matrix_inverter3x3(Jac_dUCart_dDrfmUD)\n",
+    "# Jac_dUrfm_dDCartUD, dummyDET = ixp.generic_matrix_inverter3x3(Jac_dUCart_dDrfmUD)\n",
     "\n",
-    "alpha_dD= ixp.zerorank1()\n",
-    "betaU   = ixp.zerorank1()\n",
-    "IGMvU   = ixp.zerorank1()\n",
-    "BU      = ixp.zerorank1()\n",
-    "gammaDD = ixp.zerorank2()\n",
-    "betaU_dD= ixp.zerorank2()\n",
-    "gammaDD_dD = ixp.zerorank3()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        Jac_dUrfm_dDCartUD[i][j] = sp.simplify(Jac_dUrfm_dDCartUD[i][j])\n",
-    "        betaU[i] += Jac_dUrfm_dDCartUD[i][j] * betaCartU[j]\n",
-    "        BU[i]    += Jac_dUrfm_dDCartUD[i][j] * BCartU[j]\n",
-    "        IGMvU[i] += Jac_dUrfm_dDCartUD[i][j] * IGMvCartU[j]\n",
+    "# alpha_dD= ixp.zerorank1()\n",
+    "# betaU   = ixp.zerorank1()\n",
+    "# IGMvU   = ixp.zerorank1()\n",
+    "# BU      = ixp.zerorank1()\n",
+    "# gammaDD = ixp.zerorank2()\n",
+    "# betaU_dD= ixp.zerorank2()\n",
+    "# gammaDD_dD = ixp.zerorank3()\n",
+    "# for i in range(DIM):\n",
+    "#     for j in range(DIM):\n",
+    "#         Jac_dUrfm_dDCartUD[i][j] = sp.simplify(Jac_dUrfm_dDCartUD[i][j])\n",
+    "#         betaU[i] += Jac_dUrfm_dDCartUD[i][j] * betaCartU[j]\n",
+    "#         BU[i]    += Jac_dUrfm_dDCartUD[i][j] * BCartU[j]\n",
+    "#         IGMvU[i] += Jac_dUrfm_dDCartUD[i][j] * IGMvCartU[j]\n",
     "        \n",
-    "        alpha_dD[i] += Jac_dUCart_dDrfmUD[j][i] * alphaCart_dD[j]\n",
+    "#         alpha_dD[i] += Jac_dUCart_dDrfmUD[j][i] * alphaCart_dD[j]\n",
     "\n",
-    "        for k in range(DIM):\n",
-    "            for l in range(DIM):\n",
-    "                gammaDD[i][j] += Jac_dUCart_dDrfmUD[k][i]*Jac_dUCart_dDrfmUD[l][j] * gammaCartDD[k][l]\n",
+    "#         for k in range(DIM):\n",
+    "#             for l in range(DIM):\n",
+    "#                 gammaDD[i][j] += Jac_dUCart_dDrfmUD[k][i]*Jac_dUCart_dDrfmUD[l][j] * gammaCartDD[k][l]\n",
     "                \n",
-    "                betaU_dD[i][j] += Jac_dUrfm_dDCartUD[i][k] *Jac_dUCart_dDrfmUD[l][j] * betaCartU_dD[k][l]\n",
+    "#                 betaU_dD[i][j] += Jac_dUrfm_dDCartUD[i][k] *Jac_dUCart_dDrfmUD[l][j] * betaCartU_dD[k][l]\n",
     "\n",
-    "                for m in range(DIM):\n",
-    "                    for n in range(DIM):\n",
-    "                        gammaDD_dD[i][j][k] += \\\n",
-    "                        Jac_dUCart_dDrfmUD[l][i]*Jac_dUCart_dDrfmUD[m][j]*Jac_dUCart_dDrfmUD[n][k] * \\\n",
-    "                             gammaCartDD_dD[l][m][n]"
+    "#                 for m in range(DIM):\n",
+    "#                     for n in range(DIM):\n",
+    "#                         gammaDD_dD[i][j][k] += \\\n",
+    "#                         Jac_dUCart_dDrfmUD[l][i]*Jac_dUCart_dDrfmUD[m][j]*Jac_dUCart_dDrfmUD[n][k] * \\\n",
+    "#                              gammaCartDD_dD[l][m][n]"
    ]
   },
   {
@@ -778,7 +778,130 @@
     "<a id='NRPy4Christoffels'></a>\n",
     "### Compute all 40 4-Christoffels $\\Gamma^{\\mu}_{\\nu\\delta}$ \\[Back to [top](#top)\\]\n",
     "\n",
+    "As explained in [Eq. 3.15 of Carroll's lecture notes on GR](https://ned.ipac.caltech.edu/level5/March01/Carroll3/Carroll3.html), while connection coefficients (a.k.a. Christoffel symbols) are not tensors, differences in connection coefficients are tensors.\n",
+    "\n",
+    "Thus we may define\n",
+    "\n",
+    "$$\n",
+    "\\Delta^\\mu_{\\nu\\delta} = \\Gamma^\\mu_{\\nu\\delta} - \\hat{\\Gamma}^\\mu_{\\nu\\delta},\n",
+    "$$\n",
+    "\n",
+    "where for example $\\Gamma^\\mu_{\\nu\\delta}$ is the connection related to the curved spacetime 4-metric in some basis and $\\hat{\\Gamma}^\\mu_{\\nu\\delta}$ is the connection related to the flat spacetime 4-metric in the same basis.\n",
+    "\n",
+    "We are given the 4-metric data in Cartesian coordinates, for which $\\hat{\\Gamma}^\\mu_{\\nu\\delta}=0$. The basis transform to spherical coordinates is then straightforward:\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\Delta^\\mu_{\\text{Sph}\\ \\nu\\delta} &= \\Gamma^\\mu_{\\text{Sph}\\ \\nu\\delta} - \\hat{\\Gamma}^\\mu_{\\text{Sph}\\ \\nu\\delta} \\\\\n",
+    "&= \\frac{\\partial x^\\mu_{\\rm Sph}}{\\partial x^\\alpha_{\\rm Cart}}\n",
+    "\\frac{\\partial x^\\beta_{\\rm Cart}}{\\partial x^\\nu_{\\rm Sph}}\n",
+    "\\frac{\\partial x^\\gamma_{\\rm Cart}}{\\partial x^\\delta_{\\rm Sph}} \\Delta^\\alpha_{\\text{Cart}\\ \\beta\\gamma} \\\\\n",
+    "&= \\frac{\\partial x^\\mu_{\\rm Sph}}{\\partial x^\\alpha_{\\rm Cart}}\n",
+    "\\frac{\\partial x^\\beta_{\\rm Cart}}{\\partial x^\\nu_{\\rm Sph}}\n",
+    "\\frac{\\partial x^\\gamma_{\\rm Cart}}{\\partial x^\\delta_{\\rm Sph}} \\Gamma^\\alpha_{\\text{Cart}\\ \\beta\\gamma} \\\\\n",
+    "\\implies \\Gamma^\\mu_{\\text{Sph}\\ \\nu\\delta} &= \\frac{\\partial x^\\mu_{\\rm Sph}}{\\partial x^\\alpha_{\\rm Cart}}\n",
+    "\\frac{\\partial x^\\beta_{\\rm Cart}}{\\partial x^\\nu_{\\rm Sph}}\n",
+    "\\frac{\\partial x^\\gamma_{\\rm Cart}}{\\partial x^\\delta_{\\rm Sph}} \\Gamma^\\alpha_{\\text{Cart}\\ \\beta\\gamma} +\n",
+    "\\hat{\\Gamma}^\\mu_{\\text{Sph}\\ \\nu\\delta}\n",
+    "\\end{align}\n",
+    "\n",
+    "Next, let's define $\\hat{\\Gamma}^\\mu_{\\text{Sph}\\ \\nu\\delta}$. \n",
+    "\n",
     "By definition,\n",
+    "$$\n",
+    "\\hat{\\Gamma}^{\\mu}_{\\nu\\delta} = \\frac{1}{2} \\hat{g}^{\\mu\\eta} \\left(\\hat{g}_{\\eta\\nu,\\delta} + \\hat{g}_{\\eta\\delta,\\nu} - \\hat{g}_{\\nu\\delta,\\eta}  \\right).\n",
+    "$$\n",
+    "\n",
+    "In static spherical coordinates, $\\hat{g}_{\\nu\\delta}$ is given by \n",
+    "\n",
+    "$$\n",
+    "\\hat{g}_{\\mu\\nu} = \\begin{pmatrix} \n",
+    "-1 & 0 \\\\\n",
+    "0 & \\hat{\\gamma}_{ij}\n",
+    "\\end{pmatrix},\n",
+    "$$\n",
+    "so the inverse is easy to compute:\n",
+    "$$\n",
+    "\\hat{g}^{\\mu\\nu} = \\begin{pmatrix} \n",
+    "-1 & 0 \\\\\n",
+    "0 & 1/\\hat{\\gamma}_{ij}\n",
+    "\\end{pmatrix}.\n",
+    "$$\n",
+    "Here is the NRPy+ code implementation of $\\hat{g}_{\\mu\\nu}$, $\\hat{g}^{\\mu\\nu}$, and $\\hat{g}_{\\eta\\nu,\\delta}$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g4hatDD = ixp.zerorank2(DIM=4)\n",
+    "g4hatUU = ixp.zerorank2(DIM=4)\n",
+    "g4hatDD[0][0] = sp.sympify(-1)\n",
+    "g4hatUU[0][0] = sp.sympify(-1)\n",
+    "for j in range(3):\n",
+    "    g4hatDD[j+1][j+1] = rfm.ghatDD[j][j]\n",
+    "    g4hatUU[j+1][j+1] = 1/rfm.ghatDD[j][j]\n",
+    "g4hatDDdD = ixp.zerorank3(DIM=4)\n",
+    "for eta in range(4):\n",
+    "    for nu in range(4):\n",
+    "        for j in range(3): # Time derivatives are all zero, so g4hatDDdD[eta][nu][0] = 0 (as initialized).\n",
+    "            g4hatDDdD[eta][nu][j+1] = sp.diff(g4hatDD[eta][nu],rfm.xx[j])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we compute the 4-Christoffels $\\hat{\\Gamma}^\\mu_{\\text{Sph}\\ \\nu\\delta}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⎡                                                          ⎡                  \n",
+      "⎢[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]], ⎣[0, 0, 0, 0], [0, \n",
+      "⎣                                                                             \n",
+      "\n",
+      "                           ⎡                 2     ⎤⎤  ⎡              ⎡       \n",
+      "0, 0, 0], [0, 0, -xx₀, 0], ⎣0, 0, 0, -xx₀⋅sin (xx₁)⎦⎦, ⎢[0, 0, 0, 0], ⎢0, 0, ─\n",
+      "                                                       ⎣              ⎣      x\n",
+      "\n",
+      "1    ⎤  ⎡    1       ⎤                               ⎤  ⎡              ⎡      \n",
+      "──, 0⎥, ⎢0, ───, 0, 0⎥, [0, 0, 0, -sin(xx₁)⋅cos(xx₁)]⎥, ⎢[0, 0, 0, 0], ⎢0, 0, \n",
+      "x₀   ⎦  ⎣   xx₀      ⎦                               ⎦  ⎣              ⎣      \n",
+      "\n",
+      "    1 ⎤  ⎡         cos(xx₁)⎤  ⎡    1   cos(xx₁)   ⎤⎤⎤\n",
+      "0, ───⎥, ⎢0, 0, 0, ────────⎥, ⎢0, ───, ────────, 0⎥⎥⎥\n",
+      "   xx₀⎦  ⎣         sin(xx₁)⎦  ⎣   xx₀  sin(xx₁)   ⎦⎦⎦\n"
+     ]
+    }
+   ],
+   "source": [
+    "Gamma4hatSphUDD = ixp.zerorank3(DIM=4)\n",
+    "for mu in range(4):\n",
+    "    for nu in range(4):\n",
+    "        for delta in range(4):\n",
+    "            for eta in range(4):\n",
+    "                Gamma4hatSphUDD[mu][nu][delta] += sp.Rational(1,2)*g4hatUU[mu][eta]* \\\n",
+    "                ( g4hatDDdD[eta][nu][delta] + g4hatDDdD[eta][delta][nu] - g4hatDDdD[nu][delta][eta] )\n",
+    "\n",
+    "# Here are the results, cf. Eq 18 of https://arxiv.org/pdf/1211.6632.pdf\n",
+    "sp.pretty_print(Gamma4hatSphUDD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Construction of $\\Gamma^{\\mu}_{\\nu\\delta}$ in Cartesian coordinates\n",
+    "\n",
     "$$\n",
     "\\Gamma^{\\mu}_{\\nu\\delta} = \\frac{1}{2} g^{\\mu\\eta} \\left(g_{\\eta\\nu,\\delta} + g_{\\eta\\delta,\\nu} - g_{\\nu\\delta,\\eta}  \\right)\n",
     "$$\n",
@@ -805,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
