Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis: continue work

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
@@ -1098,11 +1098,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next output the various GRMHD 3-vectors in the Spherical basis\n",
+    "\n",
+    "\\begin{align}\n",
+    "v^i_{\\rm Sph} &= \n",
+    "\\frac{\\partial x^{i}_{\\rm Sph}}{\\partial x^{j}_{\\rm Cart}} v^j_{\\rm Cart}\n",
+    "\\end{align}"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "IGMvSphU                  = ixp.zerorank1()\n",
+    "ValenciavSphU             = ixp.zerorank1()\n",
+    "Gamma_times_ValenciavSphU = ixp.zerorank1()\n",
+    "BSphU                     = ixp.zerorank1()\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        IGMvSphU[i]                  += Jac_dUrfm_dDCartUD[i][j] * IGMvU[j]\n",
+    "        ValenciavSphU[i]             += Jac_dUrfm_dDCartUD[i][j] * ValenciavU[j]\n",
+    "        Gamma_times_ValenciavSphU[i] += Jac_dUrfm_dDCartUD[i][j] * Gamma_times_ValenciavU[j]\n",
+    "        BSphU[i]                     += Jac_dUrfm_dDCartUD[i][j] * BU[j]\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    gf_interp_list.append(gf_interp(\"IGM 3-velocity vU\"+str(i)+\" = u^i/u^0 in SPHERICAL BASIS\"))\n",
+    "    interp_expr = IGMvSphU[i]\n",
+    "    which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    gf_interp_list.append(gf_interp(\"Valencia 3-velocity vU\"+str(i)+\" in SPHERICAL BASIS\"))\n",
+    "    interp_expr = ValenciavSphU[i]\n",
+    "    which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    gf_interp_list.append(gf_interp(\"Lorentz factor, times Valencia vU\"+str(i)+\" in SPHERICAL BASIS\"))\n",
+    "    interp_expr = Gamma_times_ValenciavSphU[i]\n",
+    "    which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    gf_interp_list.append(gf_interp(\"IGM magnetic field component B\"+str(i)+\" in SPHERICAL BASIS\"))\n",
+    "    interp_expr = BSphU[i]\n",
+    "    which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1116,14 +1160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_sphgrid_MO_ETK_Sph/src/construct_function_to_interpolate__store_to_interped_gf.cc\n"
+      "Overwriting interp_sphgrid_MO_ETK_Sph/src/construct_function_to_interpolate__store_to_interped_gf.cc\n"
      ]
     }
    ],
@@ -1143,12 +1187,12 @@
     "                                     const CCTK_REAL invdx0,const CCTK_REAL invdx1,const CCTK_REAL invdx2,\n",
     "                                     const CCTK_INT *InterpCounter,\n",
     "                                     const CCTK_REAL *rho_bGF,const CCTK_REAL *PGF,\n",
-    "                                     const CCTK_REAL *IGMvCartU0GF,const CCTK_REAL *IGMvCartU1GF,const CCTK_REAL *IGMvCartU2GF,\n",
-    "                                     const CCTK_REAL *BCartU0GF,const CCTK_REAL *BCartU1GF,const CCTK_REAL *BCartU2GF,\n",
-    "                                     const CCTK_REAL *gammaCartDD00GF,const CCTK_REAL *gammaCartDD01GF,const CCTK_REAL *gammaCartDD02GF,\n",
-    "                                     const CCTK_REAL *gammaCartDD11GF,const CCTK_REAL *gammaCartDD12GF,const CCTK_REAL *gammaCartDD22GF,\n",
-    "                                     const CCTK_REAL *betaCartU0GF,const CCTK_REAL *betaCartU1GF,const CCTK_REAL *betaCartU2GF,\n",
-    "                                     const CCTK_REAL *alphaCartGF,   CCTK_REAL *interped_gfGF) {\n",
+    "                                     const CCTK_REAL *IGMvU0GF,const CCTK_REAL *IGMvU1GF,const CCTK_REAL *IGMvU2GF,\n",
+    "                                     const CCTK_REAL *BU0GF,const CCTK_REAL *BU1GF,const CCTK_REAL *BU2GF,\n",
+    "                                     const CCTK_REAL *gammaDD00GF,const CCTK_REAL *gammaDD01GF,const CCTK_REAL *gammaDD02GF,\n",
+    "                                     const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
+    "                                     const CCTK_REAL *betaU0GF,const CCTK_REAL *betaU1GF,const CCTK_REAL *betaU2GF,\n",
+    "                                     const CCTK_REAL *alphaGF,   CCTK_REAL *interped_gfGF) {\n",
     "#include \"list_of_functions_to_interpolate.h\"\n",
     "}\n",
     "\n",
@@ -1192,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,14 +1270,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_sphgrid_MO_ETK_Sph/src/interp_counter.cc\n"
+      "Overwriting interp_sphgrid_MO_ETK_Sph/src/interp_counter.cc\n"
      ]
     }
    ],
@@ -1312,14 +1356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_sphgrid_MO_ETK_Sph/src/make.code.defn\n"
+      "Overwriting interp_sphgrid_MO_ETK_Sph/src/make.code.defn\n"
      ]
     }
    ],
@@ -1343,14 +1387,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_sphgrid_MO_ETK_Sph/interface.ccl\n"
+      "Overwriting interp_sphgrid_MO_ETK_Sph/interface.ccl\n"
      ]
     }
    ],
@@ -1400,14 +1444,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_sphgrid_MO_ETK_Sph/param.ccl\n"
+      "Overwriting interp_sphgrid_MO_ETK_Sph/param.ccl\n"
      ]
     }
    ],
@@ -1538,14 +1582,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_sphgrid_MO_ETK_Sph/schedule.ccl\n"
+      "Overwriting interp_sphgrid_MO_ETK_Sph/schedule.ccl\n"
      ]
     }
    ],
